--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,12 @@
             tools:context=".MainActivity">
 
         <fragment
+		        android:id="@+id/main_container_fragment"
 		        android:layout_width="match_parent"
 		        android:layout_height="match_parent"
 		        android:name="androidx.navigation.fragment.NavHostFragment"
+		        app:navGraph="@navigation/main_navigation"
+		        app:defaultNavHost="true"
             />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
